Finished JS behind site data, fixed grids on HTML layout

--- a/dstStyle.css
+++ b/dstStyle.css
@@ -1,7 +1,9 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: purple;
+    background-color: indigo;
     color: whitesmoke;
+    padding: 1%,5%,1%,5%;
+    margin:0;
 }
 
 header{
@@ -32,32 +34,31 @@ h2 {
     padding: 10px;
 }
 
+h3 {
+    font-weight: bold;
+    text-align: center;
+}
+
 #dstStart {
-    float:left;
     background-color: white;
     border: solid 2px gold;
     border-radius: 20px;
     color: black;
     margin-top: 20px;
-    margin-left:5%;
-    margin-right:5%;
-    width: 40%;
     padding:10px;
 }
 
 #dstEnd {
-    float:left;
     background-color: white;
     border: solid 2px gold;
     border-radius: 20px;
     color: black;
     margin-top: 20px;
-    margin-left:5%;
-    margin-right:5%;
-    width: 40%;
     padding:10px;
 }
 
 p {
     text-align: center;
+    font-weight: bolder;
+    font-size: 60px;
 }
